--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.11",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "next": "14.2.8",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
